GNOME Bugzilla – Bug 533891
Drag from file list and drop on file list changes the folder, but doesn't make sense
Last modified: 2008-05-27 20:42:50 UTC
Please describe the problem: While dragging a folder or file visually initializes a drag operation with the file/folder as a "cursor", dropping doesn't do anything. So why have this visual indication at the first place? Also one drags and drops a folder from the file chooser in the file chooser or cancels dragging with Escape the folder gets opened. Steps to reproduce: Actual results: Expected results: Does this happen every time? Other information:
dragging is supported for adding bookmarks (drag from file list to bookmarks pane) and dropping is supported for changing directory (e.g drag from nautilus to file list). Escape seems to work correctly for me.
(In reply to comment #1) > dragging is supported for adding bookmarks (drag from file list to bookmarks > pane) and dropping is supported for changing directory (e.g drag from nautilus > to file list). > Ah I see. I assumed I should be able to drag and drop folders and files as well. > Escape seems to work correctly for me. > So when you cancel a dragging operation of a folder with escape the file chooser doesn't end up opening that folder (listing its content)?
> So when you cancel a dragging operation of a folder with escape the file > chooser doesn't end up opening that folder (listing its content)? Not for me.
Created attachment 111627 [details] [review] gtk2-bgo533891-filechooser-file-list-dnd.diff This is the patch I've committed to trunk and gtk-2-12. 2008-05-27 Federico Mena Quintero <federico@novell.com> http://bugzilla.gnome.org/show_bug.cgi?id=533891 - Don't allow drag and drop from the file list into itself, as it doesn't make sense (it would just change the current folder). * gtk/gtkfilechooserdefault.c (file_list_dest_targets): Use GTK_TARGET_OTHER_WIDGET so we don't DnD from the file list into itself.